package logo;

public abstract class Personnage {

    /**
     * @return l'objet de MyImage correspondant a nomIm
     */
    public abstract MyImage getLogo();

    /**
     * @return le prix du logo
     */
    public abstract double combienCaCoute();
}
